Update README and manifest for InventoryExpansion mod
- Revised README.md to provide a clear description of the mod's features, installation instructions, and usage guidelines.
- Updated the Thunderstore manifest and workflow files to reflect the new mod description and ensure accurate metadata for releases.
- Enhanced clarity on configuration options for additional inventory slots and toggle functionality.

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -200,7 +200,7 @@ jobs:
           community: mimesis
           namespace: DooDesch
           name: InventoryExpansion
-          description: A boilerplate template for Mimesis mods. Replace this with your mod description.
+          description: Expand your inventory with additional backpack slots. Toggle between standard inventory and backpack with a configurable key.
           version: ${{ needs.build.outputs.version }}
           repo: mimesis.thunderstore.io
           path: thunderstore-package
