Update version to 1.1.0 and enhance README with new features
- Bumped version number in Core.cs, InventoryExpansion.csproj, and Thunderstore manifest to 1.1.0.
- Expanded README.md to include new features such as animated UI, visual key hints, automatic backpack hiding on scene change, and optional movement speed reduction while the backpack is open.
- Improved clarity on configuration options and usage instructions for the mod.

--- a/thunderstore/manifest.json
+++ b/thunderstore/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "InventoryExpansion",
-  "version_number": "1.0.0",
+  "version_number": "1.1.0",
   "website_url": "https://github.com/DooDesch/Mimesis-InventoryExpansion",
-  "description": "Expand your inventory with additional backpack slots. Toggle between standard inventory and backpack with a configurable key.",
+  "description": "Expand your inventory with additional backpack slots. Toggle between standard inventory and backpack with a configurable key. Features animated UI, visual key hints, and automatic cleanup when leaving the game.",
   "dependencies": [
     "LavaGang-MelonLoader-0.7.1"
   ],
